--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.scss">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="wrapper">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
